[package]
name = "broomfilter"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "basic"

[dependencies]
bitvec = "1.0.1"
rand = "0.10.0"
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
