[package]
name = "broomfilter"
version = "0.1.0"
edition = "2024"
description = "A bloom filter that sweeps away your certainty. Probably."
license = "MIT"
keywords = ["bloom-filter", "probabilistic", "data-structure", "broom", "maybe"]
categories = ["data-structures"]
readme = "README.md"
include = [
    "/src/**",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[features]
benchmarks = []

[profile.bench]
debug = true

[[bench]]
harness = false
name = "comparison"
required-features = ["benchmarks"]

[[bench]]
harness = false
name = "basic"
required-features = ["benchmarks"]

[dependencies]
bitvec = "1.0.1"
rand = "0.10.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastbloom = "0.17"
bloomfilter = "3"
cuckoofilter = "0.5"
xorf = "0.12"
qfilter = "0.2"
bloom = "0.3"
ethbloom = "0.14"
